# web_scrapper

./: Cargo.toml
src/: main.rs  scrape.rs
