[package]
name = "web_scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
# reqwest = "*"
select = "*"
tokio = {version = "1.12.0", features = ["full"]}
error-chain = "0.12.4"